--- a/po/sk.po
+++ b/po/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-09-07 12:51+0000\n"
+"PO-Revision-Date: 2010-09-08 14:22+0000\n"
 "Last-Translator: Peter Brtko <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-07 16:48+0000\n"
+"X-Launchpad-Export-Date: 2010-09-09 04:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: sk\n"
 
@@ -234,7 +234,7 @@ msgstr "Stupák za posledných 30 s."
 
 #: src/InfoBoxes/Content/Factory.cpp:87
 msgid "TC 30s"
-msgstr ""
+msgstr "SS 30s"
 
 #: src/InfoBoxes/Content/Factory.cpp:88
 msgid ""
@@ -323,7 +323,7 @@ msgstr "Priemer posledného stupáku"
 
 #: src/InfoBoxes/Content/Factory.cpp:127
 msgid "TL Avg"
-msgstr ""
+msgstr "SP priem"
 
 #: src/InfoBoxes/Content/Factory.cpp:128
 msgid ""
@@ -339,7 +339,7 @@ msgstr "Zisk posledného stupáku"
 
 #: src/InfoBoxes/Content/Factory.cpp:135
 msgid "TL Gain"
-msgstr ""
+msgstr "SP zisk"
 
 #: src/InfoBoxes/Content/Factory.cpp:136
 msgid "Total altitude gain/loss in the last thermal."
@@ -351,7 +351,7 @@ msgstr "Doba posledného stupáku"
 
 #: src/InfoBoxes/Content/Factory.cpp:143
 msgid "TL Time"
-msgstr ""
+msgstr "SP cas"
 
 #: src/InfoBoxes/Content/Factory.cpp:144
 msgid "Time spent circling in the last thermal."
@@ -382,13 +382,15 @@ msgstr "Vzdialenosť k ďalšiemu"
 
 #: src/InfoBoxes/Content/Factory.cpp:159
 msgid "WP Dist"
-msgstr ""
+msgstr "OB vzdial"
 
 #: src/InfoBoxes/Content/Factory.cpp:160
 msgid ""
 "The distance to the currently selected waypoint. For AAT tasks, this is the "
 "distance to the target within the AAT sector."
 msgstr ""
+"Vzdialenosť k aktívnemu otočnému bodu. Pre AAT úlohy je toto vzdialenosť k "
+"cieľovému bodu v AAT sekotre."
 
 #: src/InfoBoxes/Content/Factory.cpp:166
 msgid "Next Altitude Difference"
@@ -396,7 +398,7 @@ msgstr "Výškový rozdiel k ďalšiemu"
 
 #: src/InfoBoxes/Content/Factory.cpp:167
 msgid "WP AltD"
-msgstr ""
+msgstr "OB vyskR"
 
 #: src/InfoBoxes/Content/Factory.cpp:168
 msgid ""
@@ -411,7 +413,7 @@ msgstr "Požadovaná výška k ďalšiemu"
 
 #: src/InfoBoxes/Content/Factory.cpp:175
 msgid "WP AltR"
-msgstr ""
+msgstr "OB vyskP"
 
 #: src/InfoBoxes/Content/Factory.cpp:176
 msgid "Altitude required to reach the next turn point."
@@ -442,13 +444,15 @@ msgstr "Výškový rozdiel do cieľa"
 
 #: src/InfoBoxes/Content/Factory.cpp:191
 msgid "Fin AltD"
-msgstr ""
+msgstr "Ciel vyskR"
 
 #: src/InfoBoxes/Content/Factory.cpp:192
 msgid ""
 "Arrival altitude at the final task turn point relative to the safety arrival "
 "altitude."
 msgstr ""
+"Príletová výška do cieľového otočného bodu relatívna k bezpečnej príletovej "
+"výške."
 
 #: src/InfoBoxes/Content/Factory.cpp:198
 msgid "Final Altitude Required"
@@ -456,7 +460,7 @@ msgstr "Požadovaná výška do cieľa"
 
 #: src/InfoBoxes/Content/Factory.cpp:199
 msgid "Fin AltR"
-msgstr ""
+msgstr "Ciel vyskP"
 
 #: src/InfoBoxes/Content/Factory.cpp:200
 msgid "Altitude required to finish the task."
@@ -473,7 +477,7 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:208
 msgid ""
 "Average cross country speed while on current task, compensated for altitude."
-msgstr ""
+msgstr "Priemerná rýchlosť momentálnej úlohy, kompenzovaná pre výšku."
 
 #: src/InfoBoxes/Content/Factory.cpp:214
 msgid "Final Distance"
@@ -481,7 +485,7 @@ msgstr "Vzdialenosť do cieľa"
 
 #: src/InfoBoxes/Content/Factory.cpp:215
 msgid "Fin Dis"
-msgstr ""
+msgstr "Ciel Vzdial"
 
 #: src/InfoBoxes/Content/Factory.cpp:216
 msgid "Distance to finish around remaining turn points."
@@ -512,13 +516,15 @@ msgstr "Výška terénu"
 
 #: src/InfoBoxes/Content/Factory.cpp:231
 msgid "H GND"
-msgstr ""
+msgstr "V GND"
 
 #: src/InfoBoxes/Content/Factory.cpp:232
 msgid ""
 "This is the elevation of the terrain above mean sea level, obtained from the "
 "terrain file at the current GPS location."
 msgstr ""
+"Toto je nadmorská výška terénu, podľa súboru s terénom, na momentálnej GPS "
+"polohe."
 
 #: src/InfoBoxes/Content/Factory.cpp:238
 msgid "Thermal Average"
@@ -526,7 +532,7 @@ msgstr "Priemerné stúpanie"
 
 #: src/InfoBoxes/Content/Factory.cpp:239
 msgid "TC Avg"
-msgstr ""
+msgstr "SS priem"
 
 #: src/InfoBoxes/Content/Factory.cpp:240
 msgid ""
@@ -541,11 +547,11 @@ msgstr "Získaná výška"
 
 #: src/InfoBoxes/Content/Factory.cpp:247
 msgid "TC Gain"
-msgstr ""
+msgstr "SS zisk"
 
 #: src/InfoBoxes/Content/Factory.cpp:248
 msgid "The altitude gained/lost in the current thermal."
-msgstr ""
+msgstr "Výška získaná/stratená v súčasnom stupáku."
 
 #: src/InfoBoxes/Content/Factory.cpp:254 src/InfoBoxes/Content/Factory.cpp:255
 msgid "Track"
@@ -793,7 +799,7 @@ msgstr "Miestny čas"
 
 #: src/InfoBoxes/Content/Factory.cpp:383
 msgid "Time loc"
-msgstr ""
+msgstr "Miestny cas"
 
 #: src/InfoBoxes/Content/Factory.cpp:384
 msgid "GPS time expressed in local time zone."
@@ -1159,7 +1165,7 @@ msgstr "Napätie batérie"
 
 #: src/InfoBoxes/Content/Factory.cpp:595
 msgid "Battery"
-msgstr ""
+msgstr "Batéria"
 
 #: src/InfoBoxes/Content/Factory.cpp:596
 msgid ""
