--- a/po/sk.po
+++ b/po/sk.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-09-08 14:22+0000\n"
+"PO-Revision-Date: 2010-09-10 08:38+0000\n"
 "Last-Translator: Peter Brtko <Unknown>\n"
 "Language-Team: Slovak <sk@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-09 04:52+0000\n"
+"X-Launchpad-Export-Date: 2010-09-13 06:04+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: sk\n"
 
@@ -497,7 +497,7 @@ msgstr "Požadovaná kĺzavosť do cieľa"
 
 #: src/InfoBoxes/Content/Factory.cpp:223
 msgid "Fin LD"
-msgstr ""
+msgstr "Klz ciel"
 
 #: src/InfoBoxes/Content/Factory.cpp:224
 msgid ""
@@ -509,6 +509,12 @@ msgid ""
 "finish by the excess energy height of the glider if its true airspeed is "
 "greater than the MacCready and best LD speeds."
 msgstr ""
+"Kĺzavosť potrebná k dokončeniu úlohy, daná podielom zostávajúcej "
+"vzdialenosti k potrebnej bezpečnej príletovej výške. Negatívne hodnoty "
+"signalizujú potrebu stúpať. Ak je potrebná výška blízko k nule zobrazí sa "
+"hodnota '---'. Poznámka: tento výpočet môže byť optimistický lebo redukuje "
+"výšku potrebnú do cieľa o nadbytočnú výškovú energiu vetroňa ak TAS je "
+"väčšia ako rýchlosť MC a rýchlosť najlepšej kĺzavosti."
 
 #: src/InfoBoxes/Content/Factory.cpp:230
 msgid "Terrain Elevation"
