--- a/po/de.po
+++ b/po/de.po
@@ -8,13 +8,13 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-08-31 08:51+0200\n"
-"PO-Revision-Date: 2010-09-13 00:57+0000\n"
+"PO-Revision-Date: 2010-09-21 23:11+0000\n"
 "Last-Translator: Helmut Rohs <Unknown>\n"
 "Language-Team: German <de@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-09-13 06:04+0000\n"
+"X-Launchpad-Export-Date: 2010-09-22 09:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 "Language: de\n"
 
@@ -480,7 +480,7 @@ msgstr "Aufgabe - Durchschnittsgeschwindigkeit"
 
 #: src/InfoBoxes/Content/Factory.cpp:207
 msgid "V Task Av"
-msgstr ""
+msgstr "mitl. V Aufgabe"
 
 #: src/InfoBoxes/Content/Factory.cpp:208
 msgid ""
@@ -979,7 +979,7 @@ msgstr "Temperaturprognose"
 
 #: src/InfoBoxes/Content/Factory.cpp:471
 msgid "MaxTemp"
-msgstr ""
+msgstr "MaxTemp"
 
 #: src/InfoBoxes/Content/Factory.cpp:472
 msgid ""
@@ -1000,7 +1000,7 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:480
 msgid ""
 "Assigned Area Task distance around target points for remainder of task."
-msgstr ""
+msgstr "Verbleibende Strecke der Assigned Area Aufgabe um alle Zielpunkte."
 
 #: src/InfoBoxes/Content/Factory.cpp:486
 msgid "AA Speed Tgt"
@@ -1008,13 +1008,15 @@ msgstr "mitl. AA Geschwindigkeit zum Ziel"
 
 #: src/InfoBoxes/Content/Factory.cpp:487
 msgid "AA Vtgt"
-msgstr ""
+msgstr "AA VZiel"
 
 #: src/InfoBoxes/Content/Factory.cpp:488
 msgid ""
 "Assigned Area Task average speed achievable around target points remaining "
 "in minimum AAT time."
 msgstr ""
+"Für die Assigned Area Aufgabe erreichbare mittlere Geschwindigkeit um alle "
+"Zielpunkte in minimaler Aufgabenzeit."
 
 #: src/InfoBoxes/Content/Factory.cpp:494 src/InfoBoxes/Content/Factory.cpp:495
 msgid "L/D vario"
@@ -1027,6 +1029,9 @@ msgid ""
 "Negative values indicate climbing cruise. If the total energy vario speed is "
 "close to zero, the displayed value is '---'."
 msgstr ""
+"Momentaner Gleitwinkel, laut der angezeigten Geschwindigkeit geteilt durch "
+"den TE Variowert, soweit Sensoren verfügbar. Negative Werte zeigen ein "
+"Steigflug an. Wenn der TE Variowert nahe Null ist, wird '---' angezeigt."
 
 #: src/InfoBoxes/Content/Factory.cpp:502
 msgid "Airspeed TAS"
@@ -1034,7 +1039,7 @@ msgstr "Wahre Geschwindigkeit gegenüber Luft"
 
 #: src/InfoBoxes/Content/Factory.cpp:503
 msgid "V TAS"
-msgstr ""
+msgstr "V TAS"
 
 #: src/InfoBoxes/Content/Factory.cpp:504
 msgid "True Airspeed reported by a supported external intelligent vario."
@@ -1065,7 +1070,7 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:520
 msgid ""
 "The bearing to the team aircraft location at the last team code report."
-msgstr ""
+msgstr "Peilung zum Teamkollegen der letzten Teamkode Meldung."
 
 #: src/InfoBoxes/Content/Factory.cpp:526
 msgid "Team Bearing Diff"
@@ -1073,13 +1078,13 @@ msgstr "Team - Richtungsdifferenz"
 
 #: src/InfoBoxes/Content/Factory.cpp:527
 msgid "Team Bd"
-msgstr ""
+msgstr "Team Bd"
 
 #: src/InfoBoxes/Content/Factory.cpp:528
 msgid ""
 "The relative bearing to the team aircraft location at the last reported team "
 "code."
-msgstr ""
+msgstr "Relative Peilung zum Teamkollegen der letzten Teamkode Meldung."
 
 #: src/InfoBoxes/Content/Factory.cpp:534
 msgid "Team Range"
@@ -1092,7 +1097,7 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:536
 msgid ""
 "The range to the team aircraft location at the last reported team code."
-msgstr ""
+msgstr "Entfernung zum Teamkollegen der letzten Teamkode Meldung."
 
 #: src/InfoBoxes/Content/Factory.cpp:542
 msgid "Speed Task Instantaneous"
@@ -1118,7 +1123,7 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:552
 msgid "Distance to home waypoint (if defined)."
-msgstr ""
+msgstr "Strecke zum Heimat Wegpunkt (wenn gesetzt)."
 
 #: src/InfoBoxes/Content/Factory.cpp:558
 msgid "Speed Task Achieved"
@@ -1132,6 +1137,7 @@ msgstr ""
 msgid ""
 "Achieved cross country speed while on current task, compensated for altitude."
 msgstr ""
+"Erreichte Überland-Geschwindigkeit während der Aufgabe, Höhenkompensiert."
 
 #: src/InfoBoxes/Content/Factory.cpp:566
 msgid "AA Delta Time"
@@ -1178,7 +1184,7 @@ msgstr "Batteriespannung"
 
 #: src/InfoBoxes/Content/Factory.cpp:595
 msgid "Battery"
-msgstr ""
+msgstr "Batterie"
 
 #: src/InfoBoxes/Content/Factory.cpp:596
 msgid ""
