--- a/po/nl.po
+++ b/po/nl.po
@@ -8,14 +8,14 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-22 12:05+0200\n"
-"PO-Revision-Date: 2010-08-31 09:07+0200\n"
+"PO-Revision-Date: 2010-09-23 21:18+0000\n"
 "Last-Translator: Hans <Unknown>\n"
 "Language-Team: Dutch <nl@li.org>\n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-23 05:24+0000\n"
+"X-Launchpad-Export-Date: 2010-09-25 13:52+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
 
 #: src/Airspace/AirspaceGlue.cpp:55
@@ -602,14 +602,15 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
 "Wind speed estimated by XCSoar. (Touchscreen/PC only) Manual adjustment is "
-"possible by pressing the up/down cursor keys to adjust magnitude and left/"
-"right cursor keys to adjust bearing when the infobox is active. Pressing the "
-"enter cursor key saves the wind value as the initial value when XCSoar next "
-"starts."
+"possible by pressing the up/down cursor keys to adjust magnitude and "
+"left/right cursor keys to adjust bearing when the infobox is active. "
+"Pressing the enter cursor key saves the wind value as the initial value when "
+"XCSoar next starts."
 msgstr ""
 "Windsnelheid berekend door XCSoar. (Touchscreen/PC) Handmatig instellen bij  "
-"actieve infobox is mogelijk door pijlen up/down(snelheid) en/of pijlen links/"
-"rechts(richting). Bij [Enter] worden deze waarden als standaard bewaard."
+"actieve infobox is mogelijk door pijlen up/down(snelheid) en/of pijlen "
+"links/rechts(richting). Bij [Enter] worden deze waarden als standaard "
+"bewaard."
 
 #: src/InfoBoxes/Content/Factory.cpp:278
 msgid "Wind Bearing"
@@ -699,7 +700,8 @@ msgid "V IAS"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:328
-msgid "Indicated Airspeed reported by a supported external intelligent vario."
+msgid ""
+"Indicated Airspeed reported by a supported external intelligent vario."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:334
@@ -785,8 +787,8 @@ msgid ""
 "The required glide ratio to reach the next waypoint, given by the distance "
 "to next waypoint divided by the height required to arrive at the safety "
 "arrival altitude. Negative values indicate a climb is necessary to reach the "
-"waypoint. If the height required is close to zero, the displayed value is "
-"'---'.   Note that this calculation may be optimistic because it reduces the "
+"waypoint. If the height required is close to zero, the displayed value is '--"
+"-'.   Note that this calculation may be optimistic because it reduces the "
 "height required to reach the waypoint by the excess energy height of the "
 "glider if its true airspeed is greater than the MacCready and best LD speeds."
 msgstr ""
@@ -983,7 +985,8 @@ msgid "AA Dtgt"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:480
-msgid "Assigned Area Task distance around target points for remainder of task."
+msgid ""
+"Assigned Area Task distance around target points for remainder of task."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:486
@@ -1051,7 +1054,8 @@ msgid "Tm Brng"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:520
-msgid "The bearing to the team aircraft location at the last team code report."
+msgid ""
+"The bearing to the team aircraft location at the last team code report."
 msgstr ""
 "De peiling naar de positie van het team-vliegtuig bij de laatste team code "
 "melding"
@@ -1081,7 +1085,8 @@ msgid "Team Dis"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:536
-msgid "The range to the team aircraft location at the last reported team code."
+msgid ""
+"The range to the team aircraft location at the last reported team code."
 msgstr "De afstand tot het team vliegtuig bij de laatste team code melding"
 
 #: src/InfoBoxes/Content/Factory.cpp:542
@@ -1305,7 +1310,7 @@ msgstr ""
 "die dichter ligt bij L/D steek. De afgelegde afstand is NIET gelijk\n"
 "aan de rechte lijn tussen de posities aan het begin en eind van het\n"
 "tijdsinterval, maar is de werkelijk afgelegde afstand, zoals in een\n"
-"zig-zag. Deze waarde wordt niet berekend als er gethermiekt wordt."
+"zig-zag. Deze waarde wordt niet berekend als er gethermiekt wordt. "
 
 #: src/InfoBoxes/Content/Factory.cpp:651
 msgid "Experimental1"
@@ -1548,14 +1553,12 @@ msgid "Map"
 msgstr ""
 
 #: src/Pages.cpp:177
-#, fuzzy
 msgid "w. infoboxes"
-msgstr "Kleur infokaders*"
+msgstr ""
 
 #: src/Pages.cpp:182
-#, fuzzy
 msgid "w. aux. infoboxes"
-msgstr "Kleur infokaders*"
+msgstr ""
 
 #: src/MapWindowSymbols.cpp:118
 msgid "GPS not connected"
@@ -1849,13 +1852,13 @@ msgstr "scan weersverwachting"
 msgid "Starting devices"
 msgstr ""
 
-#.
+#. 
 #. -- Reset polar in case devices need the data
 #. LogStartUp(_T("GlidePolar::UpdatePolar"));
 #. GlidePolar::UpdatePolar(true, SettingsComputer());
-#.
+#. 
 #. This should be done inside devStartup if it is really required
-#.
+#. 
 #: src/Components.cpp:367
 msgid "Initialising display"
 msgstr "initialiseren display"
@@ -2804,9 +2807,8 @@ msgid "Weather parameters"
 msgstr "Weerparameters"
 
 #: src/Dialogs/dlgWayPointDetails.cpp:266
-#, fuzzy
 msgid "No active task point."
-msgstr "geen aktief keerpunt!"
+msgstr ""
 
 #: src/Dialogs/dlgWayPointDetails.cpp:266
 #: Data/Dialogs/dlgWayPointDetails.xml:27
@@ -2829,9 +2831,8 @@ msgid "Error"
 msgstr ""
 
 #: src/Dialogs/dlgWayPointDetails.cpp:501
-#, fuzzy
 msgid "Waypoint not in task."
-msgstr "Keerpunt niet te wijzigen"
+msgstr ""
 
 #: src/Dialogs/dlgWayPointDetails.cpp:501
 msgid "Remove from task"
@@ -3800,9 +3801,8 @@ msgid "Beep type"
 msgstr "Piep type"
 
 #: Data/Dialogs/dlgTaskPoint.xml:16 Data/Dialogs/dlgTaskPoint_L.xml:17
-#, fuzzy
 msgid "Previous"
-msgstr "Vorig keerpunt"
+msgstr ""
 
 #: Data/Dialogs/dlgConfiguration.xml:349
 #: Data/Dialogs/dlgConfiguration_L.xml:349
@@ -4529,6 +4529,9 @@ msgstr "Gem/H"
 #~ msgid "Set teamcode"
 #~ msgstr "Instellen teamcode"
 
+#~ msgid "Yes All"
+#~ msgstr "Ja op alles"
+
 #~ msgid "Accept"
 #~ msgstr "Goedkeuren"
 
@@ -4547,6 +4550,7 @@ msgstr "Gem/H"
 #~ msgid "Competition Id: "
 #~ msgstr "Wedstrijd ID: "
 
+#, c-format
 #~ msgid ""
 #~ "Waypoint \"%s\" \r\n"
 #~ "out of Terrain bounds\r\n"
@@ -4557,6 +4561,3 @@ msgstr "Gem/H"
 #~ "buiten kaartgrenzen\r\n"
 #~ "\r\n"
 #~ "Toch laden?"
-
-#~ msgid "Yes All"
-#~ msgstr "Ja op alles"
