updated manual; section text entry

--- a/doc/manual/XCSoar-manual.tex
+++ b/doc/manual/XCSoar-manual.tex
@@ -1167,13 +1167,23 @@ A text entry dialog is used for entering text.  This is used for team
 code entry, setting file names, waypoint editing, as well as entering
 other configuration options, such as pilot name for the logger.
 
-To enter text, rotate the inner knob to adjust the character under the
-cursor (underlined character), and rotate the outer knob to move the
-cursor left/right.  Press enter or escape to exit.
+Two ways of entering text are provided. See Section~\ref{sec:status} for details on customisation.
+
+To enter text in HighScore Style, use the A+/A- buttons to adjust the character under the
+cursor (underlined character). Clicking the \button{$<$} and \button{$>$} buttons move the
+cursor left/right.  
 
 \begin{center}
 \includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/textentry.png}
 \end{center}
+
+To enter text with the touch screen keyboard, press the letters of choice one after the other. In some dialogs (e.g. waypoint editing) only the next letters matching to an entry in the database will be shown. For deleting the last letter use the \button{$<-$} button.
+
+\begin{center}
+\includegraphics[angle=0,width=\linewidth,keepaspectratio='true']{figures/textentry_keyboard.png}
+\end{center}
+
+Press enter or close to exit.
 
 \section{Sounds}
 
