--- a/po/es.po
+++ b/po/es.po
@@ -8,15 +8,15 @@ msgstr ""
 "Project-Id-Version: xcsoar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2010-09-25 16:05+0200\n"
-"PO-Revision-Date: 2010-09-25 16:06+0200\n"
-"Last-Translator: Alex Caldwell <Unknown>\n"
+"PO-Revision-Date: 2010-09-30 10:40+0000\n"
+"Last-Translator: Andres Miramontes <Unknown>\n"
 "Language-Team: Spanish <es@li.org>\n"
-"Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2010-08-06 06:44+0000\n"
+"X-Launchpad-Export-Date: 2010-09-30 12:12+0000\n"
 "X-Generator: Launchpad (build Unknown)\n"
+"Language: es\n"
 
 #: src/Airspace/AirspaceGlue.cpp:55
 msgid "Loading Airspace File..."
@@ -28,7 +28,7 @@ msgstr ""
 
 #: src/Airspace/AirspaceParser.cpp:156
 msgid "Line skipped."
-msgstr "Línea se ha omitido"
+msgstr "commando o linea omitida"
 
 #: src/Airspace/AirspaceParser.cpp:157 src/Airspace/AirspaceParser.cpp:845
 #: src/Dialogs/dlgAnalysis.cpp:257 src/Dialogs/dlgConfiguration.cpp:111
@@ -38,89 +38,89 @@ msgstr "Espacio aéreo"
 
 #: src/ConditionMonitor.cpp:176
 msgid "Significant wind change"
-msgstr ""
+msgstr "Cambio significativo del viento"
 
 #: src/ConditionMonitor.cpp:293
 msgid "Expect arrival past sunset"
-msgstr ""
+msgstr "Arribo estimado después del crepusculo"
 
 #: src/ConditionMonitor.cpp:338
 msgid "Expect early task arrival"
-msgstr ""
+msgstr "Se estima final de la prueba estimado con antcipacion"
 
 #: src/ConditionMonitor.cpp:392
 msgid ""
 "Start rules slightly violated\n"
 "but within margin"
-msgstr ""
+msgstr "Las reglas de partida han sido apenas violadas"
 
 #: src/ConditionMonitor.cpp:394
 msgid "Start rules violated"
-msgstr "Las reglas de inicio se violaron"
+msgstr "Las reglas de partida han sido  violadas"
 
 #: src/Logger/Logger.cpp:148
 msgid "Start Logger"
-msgstr "Inicie la grabadora de GPS"
+msgstr "Iniciar registracion"
 
 #: src/Logger/Logger.cpp:155
 msgid "Logger inactive, insufficient storage!"
-msgstr ""
+msgstr "Registrado desactivado, memoria insuficiente"
 
 #: src/Logger/Logger.cpp:156
 msgid "Logger Error"
-msgstr ""
+msgstr "Error del registrador"
 
 #: src/Logger/Logger.cpp:184 src/Logger/Logger.cpp:185
 msgid "Stop Logger"
-msgstr ""
+msgstr "Detener el registrador"
 
 #: src/Logger/ExternalLogger.cpp:61
 msgid "Declare Task?"
-msgstr ""
+msgstr "Declara la prueba ?"
 
 #: src/Logger/ExternalLogger.cpp:64
 msgid "Task Declared!"
-msgstr ""
+msgstr "Prueba declarada !"
 
 #: src/Logger/ExternalLogger.cpp:68
 msgid ""
 "Error occured,\n"
 "Task NOT Declared!"
 msgstr ""
-"Ha ocurrido un error,\n"
-"Tarea no declarado"
+"Ha ocurrido un error \n"
+"La prueba no se a ha podido declarar la prueba"
 
 #: src/Logger/ExternalLogger.cpp:93
 msgid "No logger connected"
-msgstr ""
+msgstr "Registrador desconectado"
 
 #: src/Logger/ExternalLogger.cpp:94
 msgid "Declare task"
-msgstr "Declarar tarea"
+msgstr "Declare la prueba"
 
 #: src/Logger/ExternalLogger.cpp:109
 msgid "OK to invalidate declaration?"
-msgstr ""
+msgstr "Confirma la que la prueba no es valida ?"
 
 #: src/Logger/ExternalLogger.cpp:110
 msgid "Task declared"
-msgstr "Tarea declaró"
+msgstr "Tarea declarada"
 
 #: src/Replay/IgcReplayGlue.cpp:130
 msgid "Could not open IGC file!"
-msgstr ""
+msgstr "No se puede acceder archivo IGC"
 
 #: src/Replay/IgcReplayGlue.cpp:131 src/Replay/NmeaReplayGlue.cpp:56
 msgid "Flight replay"
-msgstr ""
+msgstr "Reproducir el vuelo"
 
 #: src/Replay/NmeaReplayGlue.cpp:55
 msgid "Could not open NMEA file!"
-msgstr ""
+msgstr "No se puede acceder archivo NMEA"
 
 #: src/WayPoint/WayPointGlue.cpp:133
 msgid "Loading Waypoints..."
-msgstr ""
+msgstr "Cargando los puntos de  referencia"
 
 #: src/Gauge/ThermalAssistantWindow.cpp:243
 msgid "Not Circling"
@@ -132,20 +132,20 @@ msgstr "No hay tráfico"
 
 #: src/AirfieldDetails.cpp:158
 msgid "Loading Airfield Details File..."
-msgstr ""
+msgstr "Cargando archivo de aerodromos"
 
 #: src/ExpandMacros.cpp:129 src/ExpandMacros.cpp:170
 #: src/InputEventsActions.cpp:1832
 msgid "Next turnpoint"
-msgstr ""
+msgstr "Proximo punto de referencia"
 
 #: src/ExpandMacros.cpp:134 src/ExpandMacros.cpp:180
 msgid "Previous turnpoint"
-msgstr ""
+msgstr "Punto de referencia anterior"
 
 #: src/ExpandMacros.cpp:146
 msgid "Furthest landpoint"
-msgstr ""
+msgstr "Lugar de aterrizaje mas alejado"
 
 #: src/ExpandMacros.cpp:147
 msgid "Next landpoint"
@@ -189,11 +189,11 @@ msgstr ""
 
 #: src/ExpandMacros.cpp:392
 msgid "Terrain off"
-msgstr ""
+msgstr "Terreno desactivado"
 
 #: src/InfoBoxes/Content/Factory.cpp:70
 msgid "Height GPS"
-msgstr ""
+msgstr "Altura GPS"
 
 #: src/InfoBoxes/Content/Factory.cpp:71
 msgid "H GPS"
@@ -205,10 +205,14 @@ msgid ""
 "only: in simulation mode, this value is adjustable with the up/down arrow "
 "keys and the right/left arrow keys also cause the glider to turn."
 msgstr ""
+"Esta es la altura sobre el nivel del mar reportada por el GPS. Pantalla "
+"interactiva/PC solamente: En modo simulador este valor se puede ajustar con "
+"las flechas arriba/abajo Las flechas derecha/izquierda permiten girar el "
+"planeador"
 
 #: src/InfoBoxes/Content/Factory.cpp:78
 msgid "Height AGL"
-msgstr ""
+msgstr "Altura sobre el terreno"
 
 #: src/InfoBoxes/Content/Factory.cpp:79
 msgid "H AGL"
@@ -220,10 +224,13 @@ msgid ""
 "terrain file. The value is coloured red when the glider is below the terrain "
 "safety clearance height."
 msgstr ""
+"Esta es la altura de navegación menos la altura del terreno obtenida del "
+"archivo de terreno. Este valor aparece en rojo cuando el planeador esta por "
+"debajo de la mínima altura sobre el terreno permitida."
 
 #: src/InfoBoxes/Content/Factory.cpp:86
 msgid "Thermal last 30 sec"
-msgstr ""
+msgstr "Termica durante los últimos 30 segundos"
 
 #: src/InfoBoxes/Content/Factory.cpp:87
 msgid "TC 30s"
@@ -234,23 +241,28 @@ msgid ""
 "A 30 second rolling average climb rate based of the reported GPS altitude, "
 "or vario if available."
 msgstr ""
+"Altura promedio ganada durante los ultimos 30 segundos, en base a la altura "
+"reportada por el GPS o Variometro si esta disponible"
 
 #: src/InfoBoxes/Content/Factory.cpp:94 src/InfoBoxes/Content/Factory.cpp:95
 #: Data/Dialogs/dlgStatus.xml:15 Data/Dialogs/dlgStatusAircraft.xml:10
 #: Data/Dialogs/dlgWayPointDetails.xml:18
 #: Data/Dialogs/dlgWayPointDetails_L.xml:18
 msgid "Bearing"
-msgstr ""
+msgstr "Rumbo"
 
 #: src/InfoBoxes/Content/Factory.cpp:96
 msgid ""
 "True bearing of the next waypoint.  For AAT tasks, this is the true bearing "
 "to the target within the AAT sector."
 msgstr ""
+"Rumbo verdadero al proximo punto de referencia. Para el area de pruebas "
+"asignado (AAT), este es el rumbo verdadero al destino dentro del sector de "
+"pruebas."
 
 #: src/InfoBoxes/Content/Factory.cpp:102
 msgid "L/D instantaneous"
-msgstr ""
+msgstr "L/D instantaneo. Coeficiente de Sustentacion resistencia instantaneo"
 
 #: src/InfoBoxes/Content/Factory.cpp:103
 msgid "L/D Inst"
@@ -263,10 +275,14 @@ msgid ""
 "climbing cruise. If the vertical speed is close to zero, the displayed value "
 "is '---'."
 msgstr ""
+"Coeficiente de planeo instantaneo, obtenido en base a la velocidad respecto "
+"a la tierra, dividida la velocidad vertical (GPS) en los ultimos 20 "
+"segundos. Valores negativos indican altura ganada en crucero. Si la la "
+"velocidad vertical es cercana a cero, el valor mostrado es '---'"
 
 #: src/InfoBoxes/Content/Factory.cpp:110
 msgid "L/D cruise"
-msgstr ""
+msgstr "L/D crucero"
 
 #: src/InfoBoxes/Content/Factory.cpp:111
 msgid "L/D Cru"
@@ -279,10 +295,15 @@ msgid ""
 "(height gain since leaving the last thermal). If the vertical speed is close "
 "to zero, the displayed value is '---'."
 msgstr ""
+"La distancia desde la altura máxima obtenida en la ultima termica, dividida "
+"por la altura perdida desde el tope de la ultima termica\r\n"
+"Valores negativos indican altura ganada de crucero. (Altura ganada desde la "
+"salida de la ultima termica). Si la la velocidad vertical es cercana a cero, "
+"el valor mostrado es '---'"
 
 #: src/InfoBoxes/Content/Factory.cpp:118
 msgid "Speed ground"
-msgstr ""
+msgstr "Velocidad respecto a la tierra"
 
 #: src/InfoBoxes/Content/Factory.cpp:119
 msgid "V Gnd"
@@ -294,10 +315,13 @@ msgid ""
 "mode, pressing the up and down arrows adjusts the speed, and left and right "
 "turn the glider."
 msgstr ""
+"Velocidad respecto a la tierra obtenida por el GPS. Si este indicador esta "
+"activo en modo simulador, presionando las flechas arriba/abajo permiten  "
+"ajustar la velocidad, y las flechas izquierda y derecha girar el planeador"
 
 #: src/InfoBoxes/Content/Factory.cpp:126
 msgid "Last Thermal Average"
-msgstr ""
+msgstr "Promedio de la ultima termica"
 
 #: src/InfoBoxes/Content/Factory.cpp:127
 msgid "TL Avg"
@@ -308,10 +332,12 @@ msgid ""
 "Total altitude gain/loss in the last thermal divided by the time spent "
 "circling."
 msgstr ""
+"Total de altura ganada/perdida en la ultima termica dividida por el tiempo "
+"transcurrido virando."
 
 #: src/InfoBoxes/Content/Factory.cpp:134
 msgid "Last Thermal Gain"
-msgstr ""
+msgstr "Ganancia en la ultima termica"
 
 #: src/InfoBoxes/Content/Factory.cpp:135
 msgid "TL Gain"
@@ -319,11 +345,11 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:136
 msgid "Total altitude gain/loss in the last thermal."
-msgstr ""
+msgstr "Total de altura ganada/perdida  en la ultima termica"
 
 #: src/InfoBoxes/Content/Factory.cpp:142
 msgid "Last Thermal Time"
-msgstr ""
+msgstr "Tiempo en la ultima termica"
 
 #: src/InfoBoxes/Content/Factory.cpp:143
 msgid "TL Time"
@@ -331,15 +357,15 @@ msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:144
 msgid "Time spent circling in the last thermal."
-msgstr ""
+msgstr "Tiempo transcurrido virando la ultima termica"
 
 #: src/InfoBoxes/Content/Factory.cpp:150
 msgid "MacCready Setting"
-msgstr ""
+msgstr "Ajuste MacReady"
 
 #: src/InfoBoxes/Content/Factory.cpp:151 Data/Dialogs/dlgVoice.xml:22
 msgid "MacCready"
-msgstr ""
+msgstr "MacCready"
 
 #: src/InfoBoxes/Content/Factory.cpp:152
 msgid ""
@@ -347,24 +373,30 @@ msgid ""
 "manual or auto. (Touchscreen/PC only) Also used to adjust the MacCready "
 "Setting if the infobox is active, by using the up/down cursor keys."
 msgstr ""
+"Valor actual de MacCready. Este indicador muestra si el MacCready esta en "
+"manual o automatico.( Pantalla interactiva/PC solamente) . Tambien se puede "
+"utilizar para ajustar el valor de MacCready si el indicador esta activo "
+"usando los cursores arriba/abajo"
 
 #: src/InfoBoxes/Content/Factory.cpp:158
 msgid "Next Distance"
-msgstr ""
+msgstr "Proxima distancia"
 
 #: src/InfoBoxes/Content/Factory.cpp:159
 msgid "WP Dist"
-msgstr ""
+msgstr "Distancia al punto de referencia"
 
 #: src/InfoBoxes/Content/Factory.cpp:160
 msgid ""
 "The distance to the currently selected waypoint. For AAT tasks, this is the "
 "distance to the target within the AAT sector."
 msgstr ""
+"La distancia al punto de referencia selccionado. Para AAT ( Area de pruebas "
+"asignada) es la distancia al destino dentro de la AAT"
 
 #: src/InfoBoxes/Content/Factory.cpp:166
 msgid "Next Altitude Difference"
-msgstr ""
+msgstr "Proxima diferencia de altura."
 
 #: src/InfoBoxes/Content/Factory.cpp:167
 msgid "WP AltD"
@@ -375,27 +407,29 @@ msgid ""
 "Arrival altitude at the next waypoint relative to the safety arrival "
 "altitude."
 msgstr ""
+"Altura de llegada al próximo punto de referencia relativa a la altura de "
+"seguridad"
 
 #: src/InfoBoxes/Content/Factory.cpp:174
 msgid "Next Altitude Required"
-msgstr ""
+msgstr "Proxima altura necesaria"
 
 #: src/InfoBoxes/Content/Factory.cpp:175
 msgid "WP AltR"
-msgstr ""
+msgstr "Altura Punto de referencia"
 
 #: src/InfoBoxes/Content/Factory.cpp:176
 msgid "Altitude required to reach the next turn point."
-msgstr ""
+msgstr "Altura necesaria para alcanzar el proximo punto de referencia"
 
 #: src/InfoBoxes/Content/Factory.cpp:182
 msgid "Next Waypoint"
-msgstr ""
+msgstr "Siguiente punto de referencia"
 
 #: src/InfoBoxes/Content/Factory.cpp:183 Data/Dialogs/dlgTaskPoint.xml:17
 #: Data/Dialogs/dlgTaskPoint_L.xml:18
 msgid "Next"
-msgstr ""
+msgstr "Siguente"
 
 #: src/InfoBoxes/Content/Factory.cpp:184
 msgid ""
@@ -404,10 +438,14 @@ msgid ""
 "task. (Touchscreen/PC only) Pressing the enter cursor key brings up the "
 "waypoint details."
 msgstr ""
+"El nombre del punto de referencia actual. Cuando este indicador esta activo, "
+"utilizando los cursores arriba/abajo seleccionan el siguiente/anterior punto "
+"de referencia. Presionando la tecla  Enter se obtiene los detalles del punto "
+"de referencia"
 
 #: src/InfoBoxes/Content/Factory.cpp:190
 msgid "Final Altitude Difference"
-msgstr ""
+msgstr "Diferencia a la altura final"
 
 #: src/InfoBoxes/Content/Factory.cpp:191
 msgid "Fin AltD"
@@ -418,10 +456,12 @@ msgid ""
 "Arrival altitude at the final task turn point relative to the safety arrival "
 "altitude."
 msgstr ""
+"Altura de arribo al punto final de la prueba relativa a la altura de "
+"seguridad al arribo"
 
 #: src/InfoBoxes/Content/Factory.cpp:198
 msgid "Final Altitude Required"
-msgstr ""
+msgstr "Altura final requerida"
 
 #: src/InfoBoxes/Content/Factory.cpp:199
 msgid "Fin AltR"
@@ -551,10 +591,10 @@ msgstr ""
 #: src/InfoBoxes/Content/Factory.cpp:272
 msgid ""
 "Wind speed estimated by XCSoar. (Touchscreen/PC only) Manual adjustment is "
-"possible by pressing the up/down cursor keys to adjust magnitude and left/"
-"right cursor keys to adjust bearing when the infobox is active. Pressing the "
-"enter cursor key saves the wind value as the initial value when XCSoar next "
-"starts."
+"possible by pressing the up/down cursor keys to adjust magnitude and "
+"left/right cursor keys to adjust bearing when the infobox is active. "
+"Pressing the enter cursor key saves the wind value as the initial value when "
+"XCSoar next starts."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:278
@@ -642,7 +682,8 @@ msgid "V IAS"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:328
-msgid "Indicated Airspeed reported by a supported external intelligent vario."
+msgid ""
+"Indicated Airspeed reported by a supported external intelligent vario."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:334
@@ -728,8 +769,8 @@ msgid ""
 "The required glide ratio to reach the next waypoint, given by the distance "
 "to next waypoint divided by the height required to arrive at the safety "
 "arrival altitude. Negative values indicate a climb is necessary to reach the "
-"waypoint. If the height required is close to zero, the displayed value is "
-"'---'.   Note that this calculation may be optimistic because it reduces the "
+"waypoint. If the height required is close to zero, the displayed value is '--"
+"-'.   Note that this calculation may be optimistic because it reduces the "
 "height required to reach the waypoint by the excess energy height of the "
 "glider if its true airspeed is greater than the MacCready and best LD speeds."
 msgstr ""
@@ -918,7 +959,8 @@ msgid "AA Dtgt"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:480
-msgid "Assigned Area Task distance around target points for remainder of task."
+msgid ""
+"Assigned Area Task distance around target points for remainder of task."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:486
@@ -982,7 +1024,8 @@ msgid "Tm Brng"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:520
-msgid "The bearing to the team aircraft location at the last team code report."
+msgid ""
+"The bearing to the team aircraft location at the last team code report."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:526
@@ -1008,7 +1051,8 @@ msgid "Team Dis"
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:536
-msgid "The range to the team aircraft location at the last reported team code."
+msgid ""
+"The range to the team aircraft location at the last reported team code."
 msgstr ""
 
 #: src/InfoBoxes/Content/Factory.cpp:542
@@ -1688,13 +1732,13 @@ msgstr ""
 msgid "Starting devices"
 msgstr ""
 
-#.
+#. 
 #. -- Reset polar in case devices need the data
 #. LogStartUp(_T("GlidePolar::UpdatePolar"));
 #. GlidePolar::UpdatePolar(true, SettingsComputer());
-#.
+#. 
 #. This should be done inside devStartup if it is really required
-#.
+#. 
 #: src/Components.cpp:367
 msgid "Initialising display"
 msgstr ""
@@ -4352,11 +4396,10 @@ msgid "Labels\n"
 msgstr ""
 
 #: Data/Input/default.xci:669
-#, fuzzy
 msgid ""
 "Nearest\n"
 "Airspace"
-msgstr "Espacio aéreo"
+msgstr ""
 
 #: Data/Input/default.xci:703
 msgid "Status"
@@ -4451,9 +4494,8 @@ msgid "GoTo"
 msgstr ""
 
 #: Data/Input/default.xci:513
-#, fuzzy
 msgid "Logger\n"
-msgstr "Inicie la grabadora de GPS"
+msgstr ""
 
 #: Data/Input/default.xci:372
 msgid ""
@@ -4510,9 +4552,8 @@ msgid "Task\n"
 msgstr ""
 
 #: Data/Input/default.xci:538
-#, fuzzy
 msgid "Raw Logger"
-msgstr "Inicie la grabadora de GPS"
+msgstr ""
 
 #: Data/Input/default.xci:346
 msgid ""
@@ -4560,11 +4601,10 @@ msgid "Nav"
 msgstr ""
 
 #: Data/Input/default.xci:505
-#, fuzzy
 msgid ""
 "Settings\n"
 "Airspace"
-msgstr "Espacio aéreo"
+msgstr ""
 
 #: Data/Input/default.xci:620
 msgid "Store"
